--- a/src/main/resources/templates/choose-role.html
+++ b/src/main/resources/templates/choose-role.html
@@ -23,9 +23,10 @@
           Lidhjet janë të sakta! th:href="@{/admin/login}" do të krijojë automatikisht
           URL-në /smarthospital/admin/login.
         -->
-        <a th:href="@{/admin/login}">Admin</a>
-        <a th:href="@{/doctor/login}">Doktor</a>
-        <a th:href="@{/nurse/login}">Infermier</a>
+        <a th:href="@{/login}">Admin</a>
+        <a th:href="@{/login}">Doktor</a>
+        <a th:href="@{/login}">Infermier</a>
+        <a th:href="@{/login}">Pacient</a>
     </div>
 </div>
 
