admin controller sec config

--- a/src/main/resources/templates/admin/signup.html
+++ b/src/main/resources/templates/admin/signup.html
@@ -16,7 +16,7 @@
     </div>
     <div>
         <label for="userName">Username:</label>
-        <input type="text" id="userName" th:field="*{userName}" required />
+        <input type="text" id="userName" th:field="*{username}" required />
     </div>
     <div>
         <label for="email">Email:</label>
